# ros2_dispatcher

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  ros2_kafka_cdr_to_ros.py  ros2_kafka_json_sidecar.py
.github/workflows/: ci.yml  docker-publish.yml  publish-images.yml  publish-packages.yml  release.yml  ros2-ci.yml
dispatcher_controller/: CMakeLists.txt  README.md  package.xml
dispatcher_controller/config/: topics.yaml
dispatcher_controller/include/dispatcher_controller/: dispatcher_controller_node.hpp
dispatcher_controller/launch/: dispatcher_controller.launch.py
dispatcher_controller/src/: dispatcher_controller_node.cpp  main.cpp
dispatcher_controller/srv/: ApplySelection.srv  GetStatus.srv  ReloadSelection.srv  SetSelectionMode.srv  StopStreaming.srv
docker/: Dockerfile  ros_entrypoint.sh
docs/: api_reference.md  architecture.md  architecture_figure.tex  benchmark_plan.md  benchmark_report.tex  configuration_reference.md  deployment.md  developer_guide.md  generate_architecture_figure.py  generate_dataflow_figure.py  getting_started.md  integration_gis4iort_ksqldb.md  latency_measurement.md  node_description.md  performance_metrics.md  summary_table.tex
gui_client/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
gui_client/gui_client/: plugin.py  rqt_gui_py  rqt_gui_py.py
gui_client/resource/: plugin.xml
gui_client/test/: test_topic_saving.py
introspection_manager/: CMakeLists.txt  README.md  package.xml
introspection_manager/config/: introspection_manager.param.yaml
introspection_manager/include/introspection_manager/: introspection_manager.hpp  introspection_manager_node.hpp  visibility_control.hpp
introspection_manager/launch/: introspection_manager.launch.py
introspection_manager/src/: introspection_manager.cpp  introspection_manager_node.cpp
introspection_manager/test/: test_introspection_manager.cpp
introspection_manager_msgs/: CMakeLists.txt  README.md  package.xml
introspection_manager_msgs/msg/: PluginInstance.msg  TopicsInfo.msg
introspection_manager_msgs/srv/: ApplyPipeline.srv  GetPipelineStatus.srv  GetTopics.srv  StopPipeline.srv
kafka_bridge/: CMakeLists.txt  package.xml
kafka_bridge/gis_health_node/: CMakeLists.txt  package.xml
kafka_bridge/gis_health_node/config/: gis_health_node.param.yaml
kafka_bridge/gis_health_node/include/gis_health_node/: gis_health_node.hpp  visibility_control.hpp
kafka_bridge/gis_health_node/launch/: gis_health_node.launch.py
kafka_bridge/gis_health_node/src/: gis_health_node.cpp
kafka_bridge/kafka_brocker/: README.md  docker-compose.yml
kafka_bridge/kafka_cdr_to_json/: CMakeLists.txt  README.md  package.xml
kafka_bridge/kafka_cdr_to_json/config/: kafka_cdr_to_json.param.yaml
kafka_bridge/kafka_cdr_to_json/include/kafka_cdr_to_json/: kafka_cdr_to_json_node.hpp  visibility_control.hpp
kafka_bridge/kafka_cdr_to_json/src/: kafka_cdr_to_json_node.cpp
kafka_bridge/kafka_client/: CMakeLists.txt  README.md
kafka_bridge/kafka_client/include/kafka_client/: kafka_producer.hpp  visibility_control.hpp
kafka_bridge/kafka_client/src/: kafka_producer.cpp
kafka_bridge/kafka_mock_server/: CMakeLists.txt  README.md  package.xml
kafka_bridge/kafka_mock_server/kafka_mock_server/: __init__.py
kafka_bridge/kafka_mock_server/launch/: kafka_mock_server.launch.py
kafka_bridge/kafka_mock_server/scripts/: kafka_mock_server_node.py
kafka_bridge/kafka_mock_server/test/: test_kafka_mock_server_node.py
kafka_bridge/kafka_sink/: CMakeLists.txt  README.md  package.xml
kafka_bridge/kafka_sink/config/: kafka_sink.param.yaml
kafka_bridge/kafka_sink/include/kafka_sink/: kafka_sink.hpp  kafka_sink_node.hpp  visibility_control.hpp
kafka_bridge/kafka_sink/launch/: kafka_sink.launch.py  kafka_sink_container.launch.py
kafka_bridge/kafka_sink/src/: kafka_sink.cpp  kafka_sink_node.cpp
kafka_bridge/kafka_sink/test/: test_kafka_sink.cpp
kafka_bridge/kafka_source/: CMakeLists.txt  README.md  package.xml
kafka_bridge/kafka_source/config/: kafka_source.param.yaml
kafka_bridge/kafka_source/include/kafka_source/: kafka_source_node.hpp  visibility_control.hpp
kafka_bridge/kafka_source/launch/: kafka_source_container.launch.py
kafka_bridge/kafka_source/src/: kafka_source_node.cpp
kafka_cdr_to_json/: CMakeLists.txt  README.md  package.xml
kafka_cdr_to_json/config/: kafka_cdr_to_json.param.yaml
kafka_cdr_to_json/include/kafka_cdr_to_json/: kafka_cdr_to_json_node.hpp  visibility_control.hpp
kafka_cdr_to_json/src/: kafka_cdr_to_json_node.cpp
kafka_client/: CMakeLists.txt  README.md  package.xml
kafka_client/examples/: simple_producer.cpp
kafka_client/include/kafka_client/: kafka_producer.hpp  visibility_control.hpp
kafka_client/src/: kafka_producer.cpp
mosquitto_bridge/mosquitto_brocker/: Dockerfile  README.md  docker-compose.yml  run.sh  (+2 more)
mosquitto_bridge/mosquitto_sink/: CMakeLists.txt  README.md  package.xml
mosquitto_bridge/mosquitto_sink/config/: mosquitto_sink.param.yaml
mosquitto_bridge/mosquitto_sink/include/mosquitto_sink/: mosquitto_sink_node.hpp  visibility_control.hpp
mosquitto_bridge/mosquitto_sink/launch/: mosquitto_sink_container.launch.py
mosquitto_bridge/mosquitto_sink/src/: mosquitto_sink_node.cpp
mosquitto_bridge/mosquitto_sink/test/: test_mosquitto_sink.cpp
mosquitto_brocker/: docker-compose.yml
plugin_interfaces/: CMakeLists.txt  package.xml
plugin_loader/: CMakeLists.txt  package.xml
ros2_kafka_dispatcher_bringup/: CMakeLists.txt  README.md  package.xml
ros2_kafka_dispatcher_bringup/config/: dispatcher_controller.yaml  introspection_manager.param.yaml  kafka_sink.yaml  kafka_sink_for_gis.param.yaml  mosquitto_sink.yaml  rosbag_select.yaml  selection_example.yaml  test_topic_tools.yaml
ros2_kafka_dispatcher_bringup/docs/: tutorial.md
ros2_kafka_dispatcher_bringup/launch/: dispatcher_controller.launch.py  introspection_manager.launch.py  kafka_sink.launch.py  mosquitto_sink.launch.py  ros2_kafka_dispatcher_bringup.launch.py  system_composed.launch.py  system_minimal.launch.py
tools/: validate_docs.py
(+149 files in other folders)
