<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dispatcher_controller</name>
  <version>0.1.0</version>
  <description>Control-plane for ROS 2 to Kafka streaming pipelines.</description>
  <maintainer email="user@example.com">ROS 2 Maintainer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_components</depend>
  <depend>composition_interfaces</depend>
  <depend>introspection_manager_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
