<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_client</name>
  <version>0.1.0</version>
  <description>RQt GUI client for interacting with the introspection manager.</description>
  <maintainer email="maciej.p.krupka@student.put.poznan.pl">mackop</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend>
  <depend>rcl_interfaces</depend>
  <depend>introspection_manager_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
