<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maciej.p.krupka@student.put.poznan.pl">mackop</maintainer>
  <license>TODO: License declaration</license>

  <depend>dispatcher_controller</depend>
  <depend>rclpy</depend>
  <exec_depend>introspection_manager_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>  
  </export>
  
</package>
