<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>introspection_manager</name>
  <version>1.0.0</version>
  <description>a node that monitors the ROS 2 graph, discovers available topics and message types, and exposes this information to other components.</description>
  <maintainer email="maciej.krupka@put.poznan.pl">Maciej Krupka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
