<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kafka_client</name>
  <version>0.1.0</version>
  <description>Thin librdkafka-based producer wrapper for ROS 2 Kafka integrations.</description>
  <maintainer email="maciej.krupka@put.poznan.pl">Maciej Krupka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <depend>librdkafka-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
