<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_kafka_dispatcher_bringup</name>
  <version>1.0.0</version>
  <description>Launch and configuration package for bringing up the ros2_kafka_dispatcher system.</description>
  <maintainer email="maciej.krupka@put.poznan.pl">Maciej Krupka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp_components</depend>
  <depend>dispatcher_controller</depend>
  <depend>kafka_sink</depend>
  <depend>mosquitto_sink</depend>
  <depend>introspection_manager</depend>
  <depend>plugin_loader</depend>
  <depend>plugin_interfaces</depend>
  <depend>gui_client</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
