<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gis_health_node</name>
  <version>1.0.0</version>
  <description>Lifecycle node publishing GIS4IoRT REGISTRATION and PING messages to Kafka, replacing the upstream Python ros2_kafka_healthcheck_bridge.</description>
  <maintainer email="maciej.krupka@put.poznan.pl">Maciej Krupka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>lifecycle_msgs</depend>
  <depend>launch_ros</depend>
  <depend>kafka_client</depend>
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
