<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mosquitto_sink</name>
  <version>1.0.0</version>
  <description>Lifecycle-based Mosquitto MQTT sink that dynamically subscribes to configured topics.</description>
  <maintainer email="maciej.krupka@put.poznan.pl">Maciej Krupka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>lifecycle_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>launch_ros</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rmw</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
